--- a/login.html
+++ b/login.html
@@ -186,7 +186,7 @@
                 <!-- Botões -->
                 <div class="d-flex justify-content-end">
                   <button type="reset" class="btn btn-secondary">Salvar</button>
-                  <!--<button type="submit" class="btn btn-primary">Salvar</button> teste-->
+                  <!--<button type="submit" class="btn btn-primary">Salvar</button>opção -->
                 </div>
               </form>
               <div class="toast-container position-fixed top-0 end-0 p-3">
